rnsc/test_data/rns_integration/error/parser/type_hints/float/missing_operand.rns
.class @float
.super java/lang/Object
